# fastpathways

./: .gitignore  CMakeLists.txt  README.md
cmd/: intchains.cpp  strchains.cpp  subsecond.cpp  vecchains.cpp
include/: fastpathways.h
scripts/calculate-list-of-ai/: compute calculation times.R  compute_assembly_indices.sh  compute_block_block.slurm  merge_results.sh
scripts/calculate-list-of-ai/_obsolete/: compute calculation times.R  compute_assembly_indices.sh
src/: CMakeLists.txt  int64.cpp  string.cpp  vector.cpp
test/: CMakeLists.txt
test/unittests/: CMakeLists.txt  int64.cpp  string.cpp  vector.cpp
